# Dxpress

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: dxpress.ex  dxpress_web.ex
lib/dxpress/: application.ex  repo.ex  structs.ex
lib/dxpress/structs/: user.ex
lib/dxpress_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/dxpress_web/channels/: user_socket.ex
lib/dxpress_web/controllers/: fallback_controller.ex  page_controller.ex  user_controller.ex
lib/dxpress_web/templates/layout/: app.html.eex
lib/dxpress_web/views/: changeset_view.ex  error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex  user_view.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20201020060301_create_users.exs
test/: test_helper.exs
test/dxpress/: structs_test.exs
test/dxpress_web/controllers/: page_controller_test.exs  user_controller_test.exs
test/dxpress_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
